<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.tezov.lib_java_android.ui.component.preference.Preference android:id="@+id/pref_sku_no_ads" />
    <com.tezov.lib_java_android.ui.component.preference.Preference
        android:id="@+id/pref_app_rating"
        android:icon="@drawable/ic_rating_24dp"
        android:summary="@string/pref_app_rating_summary"
        android:title="@string/pref_app_rating_title"
        app:isPreferenceVisible="false" />
    <com.tezov.lib_java_android.ui.component.preference.Preference
        android:id="@+id/pref_app_share"
        android:icon="@drawable/ic_share_24dp"
        android:summary="@string/pref_app_share_summary"
        android:title="@string/pref_app_share_title" />
    <PreferenceCategory android:layout="@layout/preference_layout_null">
        <com.tezov.lib_java_android.ui.component.preference.DirectoryPreference
            android:id="@+id/pref_destination_directory"
            android:icon="@drawable/ic_directory_24dp"
            android:title="@string/pref_destination_directory_title" />
        <com.tezov.lib_java_android.ui.component.preference.CheckBoxPreference
            android:id="@+id/pref_overwrite_file"
            android:icon="@drawable/ic_overwrite_file_24dp"
            android:summary="@string/pref_overwrite_file_summary"
            android:title="@string/pref_overwrite_file_title" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preference_layout_null">
        <com.tezov.lib_java_android.ui.component.preference.SwitchPreference
            android:id="@+id/pref_server_auto_select_file"
            android:icon="@drawable/ic_file_24dp"
            android:summary="@string/pref_server_auto_select_file_summary"
            android:title="@string/pref_server_auto_select_file_title" />
        <com.tezov.lib_java_android.ui.component.preference.SwitchPreference
            android:id="@+id/pref_server_auto_start"
            android:icon="@drawable/ic_play_24dp"
            android:summary="@string/pref_server_auto_start_summary"
            android:title="@string/pref_server_auto_start_title" />
        <com.tezov.lib_java_android.ui.component.preference.SwitchPreference
            android:id="@+id/pref_server_auto_stop"
            android:icon="@drawable/ic_stop_24dp"
            android:summary="@string/pref_server_auto_stop_summary"
            android:title="@string/pref_server_auto_stop_title" />
        <com.tezov.lib_java_android.ui.component.preference.SwitchPreference
            android:id="@+id/pref_server_auto_search"
            android:icon="@drawable/ic_search_24dp"
            android:summary="@string/pref_server_auto_search_summary"
            android:title="@string/pref_server_auto_search_title" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preference_layout_null">
        <com.tezov.lib_java_android.ui.component.preference.Preference
            android:id="@+id/pref_app_version"
            android:selectable="false"
            android:title="@string/pref_app_version_title"
            app:enableCopying="true" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>